options y tags en publishedquestions tested
